# cfitsio-modern-cmake

./: .Makefile.in.swp  .gitignore  CMakeLists.txt  Makefile.in  README.md  cfitsio.pc  config.status  new_Makefile.in  new_configure.in
autom4te.cache/: output.0  requests  traces.0
cmake/: cc_compilers.cmake  cfitsio.cmake  cxx_compilers.cmake  dependencies.cmake  instructions.cmake
